--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -16,6 +16,14 @@
 \usepackage{multirow}
 % for merging table cells I think
 
+\usepackage{fancyhdr} %header
+\fancyhf{}
+\fancyhead[R]{Arun Woosaree XXXXXXX}
+\renewcommand\headrulewidth{0pt}
+\fancyfoot[C]{\thepage}
+\renewcommand\footrulewidth{0pt}
+\pagestyle{fancy}
+
 % make subsection use letters
 \renewcommand{\thesubsection}{\thesection.\alph{subsection}}
 
