--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -81,16 +81,26 @@
       \label{thicc800}
     \end{figure}
 
-  \subsection{Shapes}
-    All the histograms above appear to be slightly left-skewed.
-    By simply looking at the histograms, only one peak is observable in each of them, therefore all the histograms above are single-peaked
-    There don’t seem to be any obvious outliers judging from the 3 histograms above. At first glance, the one data point that has a thickness of 33  at 800  may seem like a potential outlier, but when looking at the bigger picture in the histogram, we can see that it (in bin 34) is not visually far away from the bulk of the data
+  \subsection{Shapes}}
+    All the histograms above appear to be slightly left-skewed. Figure \ref{thicc400}
+    appears to be very slightly left-skewed, while Figure \ref{thicc600} appears to be
+    a little more left-skewed. Figure \ref{thicc800} also visually looks left-skewed as well.
+    All histograms have one obvious peak, but at first glance, Figure \ref{thicc800} might
+    seem to have a second smaller peak in bin 38, but upon further inspection, the frequency
+    count only has a difference of 1 compared to its surroundings, which does not seem significant
+    enough to count as a second peak. So, each histogram above is single-peaked.
+    There don’t seem to be any obvious outliers judging from the 3 histograms above.
+    When taking a step back and squinting, nothing seems to be visually away from the
+    bulk of the data.
 
   \subsection{Centers and Spreads}
-    The first histogram has a center around 44, and a spread of 10.
-    The second histogram has a center about 42 and a spread of 10 as well.
-    The third histogram has a center around 40, and also has a spread of 10.
-    For all 3 histograms, the means are slightly less than their respective medians.
+    The first histogram (Figure \ref{thicc400}) has a center at bin 44, and a spread (range) of 10.
+    The second histogram (Figure \ref{thicc600}) has a center at bin 41 and a spread of 10 as well.
+    The third histogram (Figure \ref{thicc800}) has a center around 40, and has a spread of 9.
+    For all 3 histograms, the means are slightly less than their respective medians, or visually,
+    the means are slightly to the left of the medians, which seems to partially confirm
+    the left skewness of the histograms. (Although the difference betweem the medians and their
+    respective means is not huge.) The mean and median for each distribution can be found in Table \ref{tempmean}
 
 
   \subsection{Effect of Temperature on Thickness}
@@ -106,6 +116,7 @@
     \multirow{2}{*}{Statistics} & \multicolumn{3}{c|}{Temperature Levels (\SI{}{\celsius})} \\ \cline{2-4}
                                 & 400           & 600          & 800          \\ \hline
     Mean                        & 0             & 0            & 0            \\ \hline
+    Median                      & 0             & 0            & 0            \\ \hline
     Std. Deviation              & 0             & 0            & 0            \\ \hline
     Variance                    & 0             & 0            & 0            \\ \hline
     \end{tabular}
