--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -81,7 +81,7 @@
       \label{thicc800}
     \end{figure}
 
-  \subsection{Shapes}}
+  \subsection{Shapes}
     All the histograms above appear to be slightly left-skewed. Figure \ref{thicc400}
     appears to be very slightly left-skewed, while Figure \ref{thicc600} appears to be
     a little more left-skewed. Figure \ref{thicc800} also visually looks left-skewed as well.
@@ -101,10 +101,15 @@
     the means are slightly to the left of the medians, which seems to partially confirm
     the left skewness of the histograms. (Although the difference betweem the medians and their
     respective means is not huge.) The mean and median for each distribution can be found in Table \ref{tempmean}
+    on page \pageref{tempmean}.
 
 
   \subsection{Effect of Temperature on Thickness}
-    It would appear that increased temperature results in an overall lower average of thickness of the films.
+    It would appear that increased temperature tends to result in overall lower thickness
+    of the films deposited. It can be noted that increasing the temperature from
+    \SI{400}{\celsius} to \SI{600}{\celsius} seems to result in a more significant decrease
+    in thickness overall, compared to the difference between the process happening at
+    \SI{600}{\celsius} and \SI{800}{\celsius}.
 
 \section{Summary Statistics}
 
@@ -179,8 +184,10 @@
 
   \subsection{Relationship Between Thickness and Pressure for each Temperature Level}
 
-\section{How should the temperature and pressure be selected to produce the thinnest possible film for the LPCVD
-process?}
+    From Figure \ref{thiccvspressurebytemp}, we can see very clearly that as pressure
+    is increased, the thickness of the film decreases
+
+    \section{How should the temperature and pressure be selected to produce the thinnest possible film for the LPCVD process?}
 
 
 
