--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -100,8 +100,8 @@ The third histogram (Figure \ref{thicc800}) has a center around 40, and has a sp
 For all 3 histograms, the means are slightly less than their respective medians, or visually,
 the means are slightly to the left of the medians, which seems to partially confirm
 the left skewness of the histograms. (Although the difference betweem the medians and their
-respective means is not huge.) The mean and median for each distribution can be found in Table \ref{tempmean}
-on page \pageref{tempmean}.
+respective means is not huge.) The mean and median for each distribution can be found in Tables
+\ref{tempmean} and \ref{tempquart} on page \pageref{tempmean}.
 
 
 \subsection{Effect of Temperature on Thickness}
@@ -121,7 +121,6 @@ in thickness overall, compared to the difference between the process happening a
   \multirow{2}{*}{Statistics} & \multicolumn{3}{c|}{Temperature Levels (\SI{}{\celsius})}             \\ \cline{2-4}
                               & 400                                                       & 600 & 800 \\ \hline
   Mean                        & 0                                                         & 0   & 0   \\ \hline
-  Median                      & 0                                                         & 0   & 0   \\ \hline
   Std. Deviation              & 0                                                         & 0   & 0   \\ \hline
   Variance                    & 0                                                         & 0   & 0   \\ \hline
  \end{tabular}
@@ -148,7 +147,7 @@ in thickness overall, compared to the difference between the process happening a
 
 Wait check this
 The 400  one doesn’t seem to match, but for 600  and 800 , the positions of the quartiles seem to support the conclusion that these histograms are left-skewed, since Q1 is further from the median than Q3 is.
-\subsection{Mean \& Std. Deviation at each pressure value}
+\subsection{Mean \& Std. Deviation of Thickness at Each Pressure Value}
 
 \begin{table}[H]
  \centering
@@ -189,8 +188,25 @@ is increased, the thickness of the film decreases
 
 \section{How should the temperature and pressure be selected to produce the thinnest possible film for the LPCVD process?}
 
-
-
-
+From Figures \ref{thicc400}, \ref{thicc600}, and \ref{thicc800} we can see that
+as the temperature is increased, the thickness of the film decreases, evidenced
+by the bulk of the data shifting left in the histograms as the temperature
+increases. By observing Tables \ref{tempmean} and \ref{tempquart}, we can see
+that the mean and median averages for thickness also decrease as the temperature
+is increased. We can also see this effect in Figure \ref{thiccvspressurebytemp},
+where the effect is evidenced by the higher temperature lines
+(\SI{600}{\celsius} \& \SI{800}{\celsius}) being lower than the
+\SI{400}{\celsius} line. Next, when looking at the effect of pressure on the
+thickness of the film deposited, we can see that in Table \ref{pressurestat},
+the mean thickness decreases when the pressure is increased. This effect is also
+seen in Figure \ref{thiccvspressurebytemp}, indicated by the negative slope of
+each line. Therefore, in order to produce the thinnest possible film for the
+LPCVD process, high pressure and temperature is desireable. It can be noted,
+however, that there may be diminishing returns as higher temperature and
+pressure is used. For example, In Figures \ref{thicc400}, \ref{thicc600}, and
+\ref{thicc800}, there is a more significant decrease in thickness by increasing
+the temperature from \SI{400}{\celsius} to \SI{600}{\celsius} compared to the
+difference in thickness by increasing the temperature from \SI{600}{\celsius}
+and \SI{800}{\celsius}.
 
 \end{document}
