--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -82,34 +82,36 @@
 \end{figure}
 
 \subsection{Shapes}
-All the histograms above appear to be slightly left-skewed. Figure \ref{thicc400}
-appears to be very slightly left-skewed, while Figure \ref{thicc600} appears to be
-a little more left-skewed. Figure \ref{thicc800} also visually looks left-skewed as well.
-All histograms have one obvious peak, but at first glance, Figure \ref{thicc800} might
-seem to have a second smaller peak in bin 38, but upon further inspection, the frequency
-count only has a difference of 1 compared to its surroundings, which does not seem significant
+All the histograms above appear to be slightly left-skewed. Figure
+\ref{thicc400} appears to be very slightly left-skewed, while Figure
+\ref{thicc600} appears to be a little more left-skewed. Figure \ref{thicc800}
+also visually looks left-skewed as well. All histograms have one obvious peak,
+but at first glance, Figure \ref{thicc800} might seem to have a second smaller
+peak in bin 38, but upon further inspection, the frequency count only has a
+difference of 1 compared to its surroundings, which does not seem significant
 enough to count as a second peak. So, each histogram above is single-peaked.
 There don’t seem to be any obvious outliers judging from the 3 histograms above.
-When taking a step back and squinting, nothing seems to be visually away from the
-bulk of the data.
+When taking a step back and squinting, nothing seems to be visually away from
+the bulk of the data.
 
 \subsection{Centers and Spreads}
-The first histogram (Figure \ref{thicc400}) has a center at bin 44, and a spread (range) of 10.
-The second histogram (Figure \ref{thicc600}) has a center at bin 41 and a spread of 10 as well.
-The third histogram (Figure \ref{thicc800}) has a center around 40, and has a spread of 9.
-For all 3 histograms, the means are slightly less than their respective medians, or visually,
-the means are slightly to the left of the medians, which seems to partially confirm
-the left skewness of the histograms. (Although the difference betweem the medians and their
-respective means is not huge.) The mean and median for each distribution can be found in Tables
-\ref{tempmean} and \ref{tempquart} on page \pageref{tempmean}.
+The first histogram (Figure \ref{thicc400}) has a center at bin 44, and a spread
+(range) of 10. The second histogram (Figure \ref{thicc600}) has a center at bin
+41 and a spread of 10 as well. The third histogram (Figure \ref{thicc800}) has a
+center around 40, and has a spread of 9. For all 3 histograms, the means are
+slightly less than their respective medians, or visually, the means are slightly
+to the left of the medians, which seems to partially confirm the left skewness
+of the histograms. (Although the difference betweem the medians and their
+respective means is not huge.) The mean and median for each distribution can be
+found in Tables \ref{tempmean} and \ref{tempquart} on page \pageref{tempmean}.
 
 
 \subsection{Effect of Temperature on Thickness}
-It would appear that increased temperature tends to result in overall lower thickness
-of the films deposited. It can be noted that increasing the temperature from
-\SI{400}{\celsius} to \SI{600}{\celsius} seems to result in a more significant decrease
-in thickness overall, compared to the difference between the process happening at
-\SI{600}{\celsius} and \SI{800}{\celsius}.
+It would appear that increased temperature tends to result in overall lower
+thickness of the films deposited. It can be noted that increasing the
+temperature from \SI{400}{\celsius} to \SI{600}{\celsius} seems to result in a
+more significant decrease in thickness overall, compared to the difference
+between the process happening at \SI{600}{\celsius} and \SI{800}{\celsius}.
 
 \section{Summary Statistics}
 
