do other stuf before your mind becomes more mush

--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -203,12 +203,12 @@ thickness of the film deposited, we can see that in Table \ref{pressurestat},
 the mean thickness decreases when the pressure is increased. This effect is also
 seen in Figure \ref{thiccvspressurebytemp}, indicated by the negative slope of
 each line. Therefore, in order to produce the thinnest possible film for the
-LPCVD process, high pressure and temperature is desireable. It can be noted,
+LPCVD process, high pressure and temperature is desireable. It can be noted
 however, that there may be diminishing returns as higher temperature and
 pressure is used. For example, In Figures \ref{thicc400}, \ref{thicc600}, and
 \ref{thicc800}, there is a more significant decrease in thickness by increasing
 the temperature from \SI{400}{\celsius} to \SI{600}{\celsius} compared to the
-difference in thickness by increasing the temperature from \SI{600}{\celsius}
+decrease in thickness by increasing the temperature from \SI{600}{\celsius}
 and \SI{800}{\celsius}.
 
 \end{document}
