--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -202,7 +202,7 @@ which was reached in Section \ref{Shapes} by visual inspection of the histograms
 
 From Figure \ref{thiccvstemp}, we can see that higher temperatures result in
 overall lower thickness of the films deposited. This is consistent with the summaries
-obtained in Section \ref{sec2}
+obtained in Section \ref{sec2}.
 
 \subsection{Thickness vs. Pressure by Temperature}
 
@@ -221,7 +221,7 @@ is increased, the thickness of the film deposited decreases. At \SI{400}{\celsiu
 we can see that the resulting thickness of the film varies a bit more as the pressure
 varies, compared to \SI{600}{\celsius} and \SI{800}{\celsius}. When the temperature is
 increased to \SI{600}{\celsius} and \SI{800}{\celsius}, the resulting thicknesses were
-more consistent and lower. At pressures over about 0.9 Torr, the thickness
+more consistent (the thickness does not vary as much as the pressure varies by small amounts) and lower. At pressures over about 0.9 Torr, the thickness
 of the films still go down as the pressure increases, but increasing the temperature from
 \SI{600}{\celsius} to \SI{800}{\celsius} does not seem to decrease the thickness by much.
 
