k actually done and printed

--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -189,6 +189,8 @@ which was reached in Section \ref{Shapes} by visual inspection of the histograms
  \label{pressurestat}
 \end{table}
 
+From Table \ref{pressurestat}, we can clearly see that as the pressure is increased,
+the overall thickness of the film deposited is decreased.
 \section{Relationships}
 
 \subsection{Thickness vs. Temperature}
@@ -202,7 +204,8 @@ which was reached in Section \ref{Shapes} by visual inspection of the histograms
 
 From Figure \ref{thiccvstemp}, we can see that higher temperatures result in
 overall lower thickness of the films deposited. This is consistent with the summaries
-obtained in Section \ref{sec2}.
+obtained in Section \ref{sec2}, where same conclusion was reached by observing the summary data
+and noticing that higher temperatures seem to result in decreased thickness of the deposited films.
 
 \subsection{Thickness vs. Pressure by Temperature}
 
