--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -85,6 +85,7 @@ and the fraction below 295 \textbf{increases/decreases}.
 % \end{figure}
 
 \section{How changes in the Mean and Std. Deviation affect the fraction of alloy slabs that do not meet the TS Specifications.} %2
+% #2
 % use the normal probablities sheet
 
 \begin{table}[H]
@@ -133,28 +134,42 @@ and the fraction below 295 \textbf{increases/decreases}.
 \subsection{} % use data analysis -> descriptive statistics tool
 % mean and std deviation fo the standardized values?
 % consistency with normal distribution theory?
+Using the \textit{Desctiptive Statistics Tool, we find that}
+$${mean} = XX.XXXX$$
+$${std.\ deviation} = XX.XXXX$$
 
-\section{Changes in Manufacturing Process} %4
+\section{Changes in Manufacturing Process}%4
 
-\subsection{Summary Statistic Table from Excel} % use data analysis -> descriptive statistics tool
+\subsection{Summary Statistics} % use data analysis -> descriptive statistics tool
+%4a
 % consitency with target parameters?
+Using the \textit{Desctiptive Statistics Tool, we find that}
+$${mean} = XX.XXXX$$
+$${std.\ deviation} = XX.XXXX$$
+This is consistent / inconsistent
 
 \subsection{Histogram}
+%4b
 % does it follow a normal distribution?
 % does it support the assumption of having a normal distribution
 
 \subsection{} %use the normal probablities sheet
+%4c
 % can the manufacturer reach the goal of less than 5% unacceptable?
 
 \subsection{} % summarize your findings on TS. Are the changes acceptable?
+%4d
 
 \section{Binomial Probabilities}
+%5
 
 \subsection{} % use the binomial probablities sheet.
+%5a
 % parameters of the distibution?
 % binomial probability?
 
 \subsection{} % use the binomial probablities sheet.
+%5b
 % parameters of the binomial distribution
 % (the value of p calculated with the normal probablities sheeet)
 % binomial probability?
