--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -64,8 +64,15 @@
 % Effect of the change on alloy strength?
 
 
-as $\sigma$ increases, the curve flattens, the and there is more variation in
-the tensile strength. makes sense, since $\sigma^2=V(x)$
+
+As $\sigma$ increases, there is more variation in the tensile strength (makes
+sense, since $\sigma^2=V(x)$). This is seen visually as the curve flattening as
+a result of the frequency count of the mode being lowered, and the frequency
+counts at the more extreme ends being increased. In terms of tensile strength,
+an increase in $\sigma$ does not change the mean but it increases the variation
+in tensile strength. This does, however mean that less of the alloy produced
+will be around the mean tensile strength, and it would increase the frequency of
+alloys exceeding the tolerances.
 
 \subsection{}%1b
 % Use normal density sheet. Manipulate the graph and describe the changes.
@@ -130,11 +137,12 @@ and the fraction below 295 \textbf{increases/decreases}.
 \end{table}
 
 \subsection{} % distribution of the standardized values?
+It's a normalized standard distibution.
 
 \subsection{} % use data analysis -> descriptive statistics tool
 % mean and std deviation fo the standardized values?
 % consistency with normal distribution theory?
-Using the \textit{Desctiptive Statistics Tool, we find that}
+Using the \textit{Descriptive Statistics Tool, we find that}
 $${mean} = XX.XXXX$$
 $${std.\ deviation} = XX.XXXX$$
 
