--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -71,18 +71,21 @@ a result of the frequency count of the mode being lowered, and the frequency
 counts at the more extreme ends being increased. In terms of tensile strength,
 an increase in $\sigma$ does not change the mean but it increases the variation
 in tensile strength. This does, however mean that less of the alloy produced
-will be around the mean tensile strength, and it would increase the frequency of
-alloys exceeding the tolerances.
+will be around the mean tensile strength, and it would increase the fraction of
+alloy slabs with unacceptable tensile strength.
 
 \subsection{}%1b
 % Use normal density sheet. Manipulate the graph and describe the changes.
 % Describe change as mu increases
 % Effect of the change on the fraction of unacceptable alloys?
 
-the mean changes
-
-As $\mu$ increases, the fraction below 275 \textbf{increases/decreases}
-and the fraction below 295 \textbf{increases/decreases}.
+With lower $\mu$ ($\mu=280$ for example), the graph appears left-skewed. This
+increases the fraction of unacceptable alloys with $TS < 275$. At $\mu=285$, the
+graph appears to be symmetric, and at higher $\mu$ ($\mu=290$ for example), the
+graph appears right-skewed. This increases the fraction of unacceptable alloys
+with $TS > 295$. Overall, as $\mu$ increases, the tensile strength of the alloys
+increase, which causes the fraction  of unacceptable alloys below 275 to
+decrease and the fraction above 295 to increase.
 
 % \begin{figure}[H]
 %  \centering
