--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -94,7 +94,7 @@ decrease and the fraction above 295 to increase.
 %  \label{}
 % \end{figure}
 
-\section{How changes in the Mean and Std. Deviation affect the fraction of alloy slabs that do not meet the TS Specifications.} %2
+\section{How changes in the Mean and Std. Deviation affect the fraction of alloy slabs that do not meet the TS Specifications} %2
 % #2
 % use the normal probablities sheet
 
@@ -118,13 +118,18 @@ decrease and the fraction above 295 to increase.
 \section{Random Number Generator} %3
 
 \subsection{} %generate the random numbers
+%3a
 % number of unacceptable slabs?
+I got 10 for the number of unacceptable slabs.
 % consistency with #2a?
+Idk if this is consistent because I haven't done \#2 yet
 
 \subsection{}
+%3b
 %table
 % what is the 68-95--99.7 rule?
 % are the generated random numbers consitent with this rule?
+The generated random numbers should be consistent with the 68-95-99.7 rule.
 
 \begin{table}[H]
  \centering
@@ -140,14 +145,18 @@ decrease and the fraction above 295 to increase.
 \end{table}
 
 \subsection{} % distribution of the standardized values?
-It's a normalized standard distibution.
+%3c
+It's a normalized standard distibution. -- \textbf{Do I need a number here??}
 
 \subsection{} % use data analysis -> descriptive statistics tool
+%3d
 % mean and std deviation fo the standardized values?
 % consistency with normal distribution theory?
-Using the \textit{Descriptive Statistics Tool, we find that}
-$${mean} = XX.XXXX$$
-$${std.\ deviation} = XX.XXXX$$
+Using the \textit{Descriptive Statistics Tool}, we find the following from the standardized values:
+% $${mean} = -0.0545753437108942$$
+% $${std.\ deviation} = 1.02207478598467$$
+$${mean} = -0.0546$$
+$${std.\ deviation} = 1.0221$$
 
 \section{Changes in Manufacturing Process}%4
 
